WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
40717
[Qt] Bridge documentation: some snippets have the wrong indentation
https://bugs.webkit.org/show_bug.cgi?id=40717
Summary
[Qt] Bridge documentation: some snippets have the wrong indentation
Noam Rosenthal
Reported
2010-06-16 10:26:30 PDT
Mainly HTML code snippets
Attachments
Patch
(3.11 KB, patch)
2010-06-16 10:29 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2010-06-16 10:29:49 PDT
Created
attachment 58903
[details]
Patch
WebKit Review Bot
Comment 2
2010-06-16 10:33:02 PDT
Attachment 58903
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebKit/qt/docs/webkitsnippets/qtwebkit_bridge_snippets.cpp:51: Should have a space between // and comment [whitespace/comments] [4] WebKit/qt/docs/webkitsnippets/qtwebkit_bridge_snippets.cpp:53: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Noam Rosenthal
Comment 3
2010-06-16 10:35:18 PDT
Posted check-webkit-style false positives, see 40719
WebKit Commit Bot
Comment 4
2010-06-19 04:58:35 PDT
Comment on
attachment 58903
[details]
Patch Clearing flags on attachment: 58903 Committed
r61480
: <
http://trac.webkit.org/changeset/61480
>
WebKit Commit Bot
Comment 5
2010-06-19 04:58:40 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 6
2010-06-19 08:47:03 PDT
Revision
r61480
cherry-picked into qtwebkit-2.0 with commit 2094af9c87089572f6bc65196dcb40a9719db2cb
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug