2010-06-19  No'am Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Simon Hausmann.

        Bridge documentation: some snippets have the wrong indentation
        https://bugs.webkit.org/show_bug.cgi?id=40717

        Fixed code snippets

        * docs/webkitsnippets/qtwebkit_bridge_snippets.cpp:
        (wrapInFunction):

Canonical link: https://commits.webkit.org/52490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61480 268f45cc-cd09-0410-ab3c-d52691b4dbfc